--- a/dunpik.html
+++ b/dunpik.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     Subskrybuj i daj like'a :)
-    <a href="./index.html">powrót</a>
+    <a href="./">powrót</a>
 </body>
 </html>
