--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     Witam na mojej stronie :)
-    <a href="./dunpik.html">dunpik</a>
+    <a href="./dunpik">dunpik</a>
 </body>
 </html>
